# text-to-code-local-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.sh
backend/: __init__.py  app.py  llm.py  main.py  models.py  prompt.py
frontend/: app.py
frontend/static/: find_first_in_rotated_array.md  find_first_in_rotated_array.py  two_sum.md  two_sum.py  two_sum_sorted.md  two_sum_sorted.py
