[project]
name = "text-to-code-local-poc"
version = "0.1.0"
description = "POC with a FastAPI backend and Streamlit frontend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "requests",
    "streamlit",
    "streamlit-ace>=0.1.1",
    "uvicorn",
]

[tool.uv]
package = false
